--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,5 +21,6 @@
         android:id="@+id/me"
         android:name="com.example.myapplication0.ui_bar.me.MeFragment"
         android:label="@string/me"
-        tools:layout="@layout/fragment_me" />
+        tools:layout="@layout/fragment_me"
+        />
 </navigation>
